# mtg-graph

./: .env.example  .gitignore  LICENSE  README.md  mtg-graph.code-workspace  pyproject.toml  requirements.txt
docs/: create_architecture_doc.js  mtg_gnn_deck_constructor_spec.md
notebooks/: inference_deck_colab.ipynb  sweep_deck_colab.ipynb  train_colab.ipynb  train_deck_colab.ipynb
results/deck/2026-03-23_131719/: training_log.json
src/: audit_edges.py  card_embeddings.py  card_interaction_edges.py  config.py  deck_predictor.py  graph_builder.py  ingest_all.py  ingest_cards.py  ingest_matchups.py  ingest_metagame.py  ingest_tournaments.py  keyword_matrix.py  model.py  oracle_parser.py  synergy_eval.py  synthetic_data.py  train.py  train_deck.py  visualize.py  visualize_deck.py
