[project]
name = "mtg-graph"
version = "0.1.0"
description = "Heterogeneous Graph Neural Network for Magic: The Gathering metagame prediction"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "spacy>=3.7.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
